--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ pypi:
     - python setup.py sdist bdist_wheel
     - twine upload dist/*
   only:
-    - tags@hobarrera/ocaclient
+    - tags@WhyNotHugo/ocaclient
   environment:
     name: PyPI
     url: https://pypi.python.org/pypi/ocaclient
