--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,10 @@ script:
 
 jobs:
   include:
+    - stage: test
+      script:
+        - pip install tox
+        - tox -e flake8
     - stage: deploy
       script:
         - pip install wheel twine
