--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 "e1839a8" = {path = ".", editable = true}
 
-
-
 [dev-packages]
 ipython = "*"
+mypy = "*"
+types-python-dateutil = "*"
