--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,5 +16,8 @@ mypy = "^0.941"
 types-python-dateutil = "^2.8.9"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry>=1.2.0a2", "poetry-dynamic-versioning>=1.0.0b1"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry-dynamic-versioning]
+enable = true
